--- a/django/1.django-custom-user-model.md
+++ b/django/1.django-custom-user-model.md
@@ -1,9 +1,11 @@
 ---
-title: Django tutorial part 1: first django app
+title: Django custom user model
 date: 2020-01-31
 tags:
 - django
-- tutorial
+- custom
+- user
+- model
 ---
 
 # Step 1. Setup Django environment
