update: 1.deploy-django typos

--- a/django/1.deploy-django.md
+++ b/django/1.deploy-django.md
@@ -44,7 +44,7 @@ postgres=# \q
 
 # Step 3. Setup Python environment
 
-I prefer to `virtualenvwrapper` to manage my python virtualenvs, it easy to use and manage than the original python virtualenv program. 
+I prefer to use `virtualenvwrapper` to manage my python virtualenvs, it easy to use and manage than the original python virtualenv program. 
 
 ```shell
 $ pip3 install virtualenvwrapper
@@ -93,6 +93,11 @@ We'll leave the debug.py as the current state, and focus only on the production.
 
 First, and the most important setting we need to change is `DEBUG` option, Django set the `DEBUG` option to `True` by default, we need to change it to `False` in production mode as mentioned in the [Django Official Document.](https://docs.djangoproject.com/en/3.0/ref/settings/#std:setting-DEBUG)
 
+And also read the `SECRET_KEY` from env vaviable instead of hardcode into setting file.
+```Python
+SECRET_KEY = os.environ['DJANGO_SECRET_KEY']
+```
+
 Next, setup the database.
 ```Python
 DATABASES = {
@@ -117,21 +122,7 @@ The code simply checks that if the system env variable `DJANGO_SETTINGS_MODULE` 
 
 And yes, if we set `DJANGO_SETTINGS_MODULE` env variable to `smartinventory.settings.production` in our live server, Django will read the productin setting module as default.
 
-3. setup django project
-git clone repo
-install requirements
-
-set these env variables
-DJANGO_SETTINGS_MODULE: production setting 파일의 경로
-DJANGO_SECRET_KEY
-DJANGO_DB_PASSWORD
-
 # Step 5. Setup gunicorn
-
-
-
-
-
 
 Install gunicorn with pip.
 ```shell
@@ -197,5 +188,5 @@ Last, restart the nginx service.
 $ sudo systemctl restart nginx
 ```
 
-That's it, now type the domain name(or IP) in your browser, you should see the index page of your django project.
+That's it, now type the domain name(or IP) in your browser, you should see the index page of your Django project.
 congratulations! :\
