update: 1.deploy-django headline style

--- a/django/1.deploy-django.md
+++ b/django/1.deploy-django.md
@@ -8,12 +8,12 @@ tags:
 - nginx
 ---
 
-# Introduction
+# #0. Introduction
 
 In this article, we are going to talk about how to deploy Django project with postgresql, gunicorn and nginx. 
 
 
-# Step 1. Install packages
+# #1. Install packages
 
 First of all, install all packages we're going to use with following command.
 
@@ -21,7 +21,7 @@ First of all, install all packages we're going to use with following command.
 $ sudo apt-get install python3-pip python3-dev libpq-dev postgresql postgresql-contrib nginx -y
 ```
 
-# Step 2. Setup Database
+# #2. Setup Database
 
 After the installation, first thing we need to do is start up the database server(in case of the database server doesn't automatically start up), and access to the posgres prompt to create a database and user for our django project.
 
@@ -42,7 +42,7 @@ GRANT
 postgres=# \q
 ```
 
-# Step 3. Setup Python environment
+# #3. Setup Python environment
 
 I prefer to use `virtualenvwrapper` to manage my python virtualenvs, it easy to use and manage than the original python virtualenv program. 
 
@@ -68,7 +68,7 @@ And activate.
 $ workon env
 ```
 
-# Step 4. Setup Django project
+# #4. Setup Django project
 
 I think we are not going to talk too much detail about how to initiate a Django project, I assume you already have a ready-to-deply Django project, and we'll focus on how to create different setting modules for production and debug.
 
@@ -122,7 +122,7 @@ The code simply checks that if the system env variable `DJANGO_SETTINGS_MODULE` 
 
 And yes, if we set `DJANGO_SETTINGS_MODULE` env variable to `smartinventory.settings.production` in our live server, Django will read the productin setting module as default.
 
-# Step 5. Setup gunicorn
+# #5. Setup gunicorn
 
 Install gunicorn with pip.
 ```shell
@@ -162,7 +162,7 @@ $ sudo systemctl start gunicorn
 $ sudo systemctl enable gunicorn
 ```
 
-# Step 6. Setup nginx
+# #6. Setup nginx
 
 Since we've bind our Django project to a unix socket with gunicorn, the only thing we need to do with nginx is to set a proxy to the unix socket. 
 
