--- a/django/1.deploy-django.md
+++ b/django/1.deploy-django.md
@@ -3,27 +3,32 @@ title: Deploy Django project with gunicorn and nginx
 date: 2020-02-05
 tags:
 - django
-- deploy
+- deploy django
 - gunicorn
 - nginx
 ---
 
-### #0 Introduction
-
-In this article, we are going to talk about how to deploy Django project with postgresql, gunicorn and nginx. 
+Recently I developed a project using Django as backend framework, and Vuetify as the frontend, and I want to write down the process about how to deploy Django with gunicorn, PostgreSQL, and nginx since I didn’t find too many detailed posts about these combinations.
 
 
-### #1 Install packages
+### Install packages
 
-First of all, install all packages we're going to use with following command.
+First of all, install all the packages we’re going to use with the following command.
 
 ```shell
 $ sudo apt-get install python3-pip python3-dev libpq-dev postgresql postgresql-contrib nginx -y
 ```
 
-### #2 Setup Database
+### Setup Database
 
-After the installation, first thing we need to do is start up the database server(in case of the database server doesn't automatically start up), and access to the posgres prompt to create a database and user for our django project.
+After the installation, we need to start up the database server(in case of the database server doesn’t automatically startup) and access the postgres prompt to create a database and user for our Django project.
+
+Use the following command to access postgres prompt.
+```
+$ sudo -u postgres psql
+```
+
+And create user and database.
 
 ```shell
 db setting
@@ -42,7 +47,7 @@ GRANT
 postgres=# \q
 ```
 
-### #3 Setup Python environment
+### Setup Python environment
 
 I prefer to use `virtualenvwrapper` to manage my python virtualenvs, it easy to use and manage than the original python virtualenv program. 
 
@@ -50,7 +55,7 @@ I prefer to use `virtualenvwrapper` to manage my python virtualenvs, it easy to 
 $ pip3 install virtualenvwrapper
 ```
 
-And then, we need to add following lines to the .bashrc(or the rc file for whatever shell you use) file, feel free to change the paths if needed.
+And then, we need to add the following lines to the .bashrc(or the config file for whatever shell you use) file, feel free to change the paths if needed.
 
 ```shell
 # virtualenvwrapper settings
@@ -68,38 +73,39 @@ And activate.
 $ workon env
 ```
 
-### #4 Setup Django project
+### Setup Django project
 
-I think we are not going to talk too much detail about how to initiate a Django project, I assume you already have a ready-to-deply Django project, and we'll focus on how to create different setting modules for production and debug.
+I think we are not going to talk too much detail about how to initiate a Django project, I assume you already have a ready-to-deploy Django project, and we’ll focus on how to create different setting modules for production and developing mode.
 
 Now, you have only one setting file which is `my_project/my_project/settings.py`, and we need to change the structure of the setting modules as follows.
 
 Run following commands in the root directory of your Django project.
 ```shell
-$ cd my_project # cd into the directory of settings.py file
-$ mkdir settings # make a new directory for setting modules
-$ mv settings.py settings/debug.py # move settings.py to settings directory and rename it to debug.py
-$ cp settings/debug.py settings/production.py # copy debug.py to production.py
+$ cd my_project     
+$ mkdir settings 
+$ mv settings.py settings/debug.py 
+$ cp settings/debug.py settings/production.py
 ```
 
-Now, we have two separate setting modules, and the structure of the setting modules is as follows.
+What we’ve done is move the existing setting module into `settings` directory and rename it to `debug.py` which is for developing mode, also copied another file called `production.py`, for production mode.
 
 ```shell
 my_project/my_project/settings/debug.py
 my_project/my_project/settings/production.py
 ```
 
-We'll leave the debug.py as the current state, and focus only on the production.py. 
+We'll leave the `debug.py` as the current state, and focus only on the `production.py`.
 
 First, and the most important setting we need to change is `DEBUG` option, Django set the `DEBUG` option to `True` by default, we need to change it to `False` in production mode as mentioned in the [Django Official Document.](https://docs.djangoproject.com/en/3.0/ref/settings/#std:setting-DEBUG)
 
-And also read the `SECRET_KEY` from env vaviable instead of hardcode into setting file.
+Also, read the `SECRET_KEY` from the env variable instead of hard code into setting file, and update `DATABASES` config to the database information we created above.
 ```Python
 SECRET_KEY = os.environ['DJANGO_SECRET_KEY']
-```
 
-Next, setup the database.
-```Python
+# ...
+# other configs
+# ...
+
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.postgresql',
@@ -112,17 +118,16 @@ DATABASES = {
 }
 ```
 
-Since we've changed the path of the setting modules, we also need to change the references to the setting modules. By default, setting module is referenced in two places, `manage.py` and `wsgi.py`.
+Since we’ve changed the path of the settings module, we also need to change the references to the setting modules. By default, the setting modules are referenced in two places, `manage.py` and `wsgi.py`.
 
 ```Python
-os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'smartinventory.settings')
+os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'my_project.settings')
 ```
 
-The code simply checks that if the system env variable `DJANGO_SETTINGS_MODULE` is exists, if it doesn't, set it to `smartinventory.settings` which is the path of default setting module, and here we need to change the path to `smartinventory.settings.debug`, this allows us to still use the debug settings module when developing.
+The code simply checks that if the system env variable `DJANGO_SETTINGS_MODULE` is exists, if it doesn’t, set it to `my_project.settings` which is the path of default setting module, and here we need to change the path to `my_project.settings.debug`, this allows us to still use the debug settings module when developing.
+And if we set `DJANGO_SETTINGS_MODULE` env variable to `my_project.settings.production` in our production server, Django will read the production setting module as default.
 
-And yes, if we set `DJANGO_SETTINGS_MODULE` env variable to `smartinventory.settings.production` in our live server, Django will read the productin setting module as default.
-
-### #5 Setup gunicorn
+### Setup gunicorn
 
 Install gunicorn with pip.
 ```shell
@@ -150,11 +155,12 @@ ExecStart=/home/username/.virtualenvs/env/bin/gunicorn --access-logfile - --work
 WantedBy=multi-user.target
 ```
 
-Note that the `EnvironmentFile=/path/to/envs/file` option, somehow, gunicorn can't read the system env variables properly in my ubuntu server, so the fix for this is to create a file containing the env variables and set the `EnvironmentFile` option in gunicorn service file, and the content of the envs file are as follows.
+Note that the `EnvironmentFile=/path/to/envs/file` option, somehow, gunicorn can’t read the system env variables properly in my ubuntu server, so the fix for this is to create a file containing the env variables and set the `EnvironmentFile` option in gunicorn service file and the content of the envs file is as follows.
 ```
-DJANGO_SETTINGS_MODULE='smartinventory.settings.production'
-DJANGO_SECRET_KEY='txx*zi!vuqgutvg=@2-drm12+erws*e304_baqkb*y*fnu$@82'
+DJANGO_SETTINGS_MODULE='my_project.settings.production'
+DJANGO_SECRET_KEY='yoursecretkey'
 ```
+>The system env variables are still needed since they will be when running manage.py.
 
 Start and enable gunicorn service.
 ```
@@ -162,9 +168,9 @@ $ sudo systemctl start gunicorn
 $ sudo systemctl enable gunicorn
 ```
 
-### #6 Setup nginx
+### Setup nginx
 
-Since we've bind our Django project to a unix socket with gunicorn, the only thing we need to do with nginx is to set a proxy to the unix socket. 
+Since we’ve bind our Django project to a unix socket with gunicorn, the only thing we need to do with nginx is to set a proxy to the unix socket.
 
 ```
 server {
@@ -188,5 +194,4 @@ Last, restart the nginx service.
 $ sudo systemctl restart nginx
 ```
 
-That's it, now type the domain name(or IP) in your browser, you should see the index page of your Django project.
-congratulations! :\
+That’s it, now type the domain name(or IP) in your browser, we should see the index page of your Django project.
